--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,4 +5,5 @@
     <dimen name="coordinates_text_size">24sp</dimen>
     <dimen name="elevation_text_size">96sp</dimen>
     <dimen name="elevation_unit_text_size">24sp</dimen>
+    <dimen name="waiting_text_size">12sp</dimen>
 </resources>
