--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -101,7 +101,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="end"
-            android:text="@string/ad_mob_remove_button"/>
+            android:text="@string/ad_mob_remove_button"
+            android:visibility="gone"/>
 
         <com.google.android.gms.ads.AdView
             android:id="@+id/ad_view"
