--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,7 +19,7 @@
             android:id="@+id/altitude_layout"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="12dp"
+            android:layout_marginBottom="8dp"
             android:animateLayoutChanges="true"
             android:gravity="center"
             android:orientation="vertical"
@@ -47,10 +47,11 @@
                 android:id="@+id/altitude_unit_text_view"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_margin="8dp"
                 android:layout_marginTop="-16dp"
-                android:background="?android:attr/selectableItemBackgroundBorderless"
+                android:background="?android:attr/selectableItemBackground"
                 android:gravity="center"
-                android:padding="16dp"
+                android:padding="8dp"
                 android:textSize="@dimen/elevation_unit_text_size"
                 tools:text="@string/unit_feet"/>
 
@@ -58,11 +59,13 @@
 
         <LinearLayout
             android:id="@+id/coordinates_layout"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="10dp"
+            android:layout_marginBottom="2dp"
+            android:background="?android:attr/selectableItemBackground"
             android:gravity="center"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:padding="8dp">
 
             <TextView
                 android:id="@+id/coordinates_latitude_text_view"
