Display all location stats

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">@color/white</color>
-    <color name="colorPrimaryDark">@color/gray</color>
+    <color name="colorPrimaryDark">@color/darkGray</color>
     <color name="colorAccent">@color/blue</color>
     <color name="white">#FFFFFF</color>
-    <color name="gray">#AAAAAA</color>
+    <color name="darkGray">#737373</color>
     <color name="blue">#00a9e7</color>
 </resources>
