--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,5 +5,6 @@
     <dimen name="coordinates_text_size">20sp</dimen>
     <dimen name="elevation_text_size">96sp</dimen>
     <dimen name="elevation_unit_text_size">24sp</dimen>
-    <dimen name="waiting_text_size">12sp</dimen>
+
+    <dimen name="stat_image_size">56dp</dimen>
 </resources>
