--- a/app/src/main/res/layout/main_activity.xml
+++ b/app/src/main/res/layout/main_activity.xml
@@ -50,6 +50,7 @@
 
     </LinearLayout>
 
+    <!-- First row -->
     <LinearLayout
         style="@style/StatRow"
         android:layout_width="match_parent"
@@ -93,51 +94,6 @@
 
         </LinearLayout>
 
-        <!-- Satellites -->
-        <LinearLayout
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:gravity="center"
-            android:orientation="vertical">
-
-            <ImageView
-                style="@style/StatImageView"
-                android:contentDescription="@string/satellites"
-                android:src="@drawable/satellite_variant"/>
-
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
-
-                <TextView
-                    android:id="@+id/satellites_value_text_view"
-                    style="@style/GridValueTextView"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    tools:text="10"/>
-
-                <TextView
-                    android:id="@+id/satellites_unit_text_view"
-                    style="@style/SmallUnitTextView"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/sats"/>
-
-            </LinearLayout>
-
-        </LinearLayout>
-
-    </LinearLayout>
-
-    <LinearLayout
-        style="@style/StatRow"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:baselineAligned="false"
-        android:orientation="horizontal">
-
         <!-- Speed -->
         <LinearLayout
             android:layout_width="0dp"
@@ -169,6 +125,53 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     tools:text="mph"/>
+
+            </LinearLayout>
+
+        </LinearLayout>
+
+    </LinearLayout>
+
+    <!-- Second row -->
+    <LinearLayout
+        style="@style/StatRow"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:baselineAligned="false"
+        android:orientation="horizontal">
+
+        <!-- Bearing -->
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:orientation="vertical">
+
+            <ImageView
+                style="@style/StatImageView"
+                android:contentDescription="@string/bearing"
+                android:src="@drawable/ic_explore_black_24dp"/>
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/bearing_value_text_view"
+                    style="@style/GridValueTextView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="0dp"
+                    tools:text="359"/>
+
+                <TextView
+                    android:id="@+id/bearing_unit_text_view"
+                    style="@style/GridValueTextView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/unit_degrees"/>
 
             </LinearLayout>
 
@@ -212,6 +215,7 @@
 
     </LinearLayout>
 
+    <!-- Third row -->
     <LinearLayout
         style="@style/StatRow"
         android:layout_width="match_parent"
@@ -219,7 +223,7 @@
         android:baselineAligned="false"
         android:orientation="horizontal">
 
-        <!-- Bearing -->
+        <!-- Satellites -->
         <LinearLayout
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -229,8 +233,8 @@
 
             <ImageView
                 style="@style/StatImageView"
-                android:contentDescription="@string/bearing"
-                android:src="@drawable/ic_explore_black_24dp"/>
+                android:contentDescription="@string/satellites"
+                android:src="@drawable/satellite_variant"/>
 
             <LinearLayout
                 android:layout_width="wrap_content"
@@ -238,19 +242,18 @@
                 android:orientation="horizontal">
 
                 <TextView
-                    android:id="@+id/bearing_value_text_view"
+                    android:id="@+id/satellites_value_text_view"
                     style="@style/GridValueTextView"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginEnd="0dp"
-                    tools:text="359"/>
+                    tools:text="10"/>
 
                 <TextView
-                    android:id="@+id/bearing_unit_text_view"
-                    style="@style/GridValueTextView"
+                    android:id="@+id/satellites_unit_text_view"
+                    style="@style/SmallUnitTextView"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/unit_degrees"/>
+                    android:text="@string/sats"/>
 
             </LinearLayout>
 
