--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -9,17 +9,17 @@
         <item name="android:windowTranslucentStatus">true</item>
     </style>
 
-    <style name="TopValueTextView">
-        <item name="android:textSize">22sp</item>
+    <style name="ValueTextViewSmall">
+        <item name="android:textSize">@dimen/value_text_size_small</item>
     </style>
 
-    <style name="GridValueTextView">
-        <item name="android:textSize">42sp</item>
+    <style name="ValueTextViewBig">
+        <item name="android:textSize">@dimen/value_text_size_big</item>
         <item name="android:layout_marginEnd">6dp</item>
     </style>
 
-    <style name="SmallUnitTextView">
-        <item name="android:textSize">28sp</item>
+    <style name="UnitTextViewBig">
+        <item name="android:textSize">@dimen/unit_text_size_big</item>
     </style>
 
     <style name="StatRow">
