--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,9 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">@color/white</color>
-    <color name="colorPrimaryDark">@color/darkGray</color>
+    <color name="colorPrimary">@color/darkGray</color>
+    <color name="colorPrimaryDark">@color/black</color>
     <color name="colorAccent">@color/blue</color>
+    <color name="black">#000000</color>
     <color name="white">#FFFFFF</color>
-    <color name="darkGray">#737373</color>
+    <color name="darkGray">#333333</color>
     <color name="blue">#00a9e7</color>
+
+    <color name="gray1">#202020</color>
+    <color name="gray2">#282828</color>
+    <color name="gray3">#303030</color>
+    <color name="gray4">#383838</color>
+    <color name="gray5">#404040</color>
+    <color name="gray6">#484848</color>
+    <color name="gray7">#505050</color>
+    <color name="gray8">#585858</color>
+    <color name="gray9">#606060</color>
+    <color name="gray10">#686868</color>
+    <color name="gray11">#707070</color>
+    <color name="gray12">#787878</color>
+    <color name="gray13">#808080</color>
+    <color name="gray14">#888888</color>
+    <color name="gray15">#909090</color>
+    <color name="gray16">#989898</color>
 </resources>
