--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,33 +6,46 @@
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
-        <item name="android:windowTranslucentStatus">true</item>
     </style>
 
-    <style name="ValueTextViewSmall">
-        <item name="android:textSize">@dimen/value_text_size_small</item>
+    <style name="ValueTextViewTop">
+        <item name="android:textSize">@dimen/value_text_size_top</item>
+        <item name="android:textColor">@color/white</item>
+    </style>
+
+    <style name="LabelTextViewBig">
+        <item name="android:textSize">@dimen/value_text_size_standard</item>
+        <item name="android:textColor">@color/white</item>
     </style>
 
     <style name="ValueTextViewBig">
-        <item name="android:textSize">@dimen/value_text_size_big</item>
+        <item name="android:textSize">@dimen/value_text_size_standard</item>
         <item name="android:layout_marginEnd">6dp</item>
+        <item name="android:layout_width">0dp</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_weight">1</item>
+        <item name="android:gravity">end</item>
     </style>
 
     <style name="UnitTextViewBig">
         <item name="android:textSize">@dimen/unit_text_size_big</item>
+        <item name="android:textColor">@color/white</item>
     </style>
 
     <style name="StatRow">
-        <item name="android:layout_margin">12dp</item>
-        <item name="android:layout_weight">1</item>
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">72dp</item>
+        <item name="android:paddingStart">@dimen/activity_horizontal_margin</item>
+        <item name="android:paddingEnd">@dimen/activity_horizontal_margin</item>
         <item name="android:gravity">center_vertical</item>
     </style>
 
     <style name="StatImageView">
         <item name="android:layout_height">@dimen/stat_image_size</item>
         <item name="android:layout_width">@dimen/stat_image_size</item>
-        <item name="android:layout_marginBottom">12dp</item>
-        <item name="android:tint">@color/darkGray</item>
+        <item name="android:layout_marginEnd">12dp</item>
+        <item name="android:tint">@color/white</item>
     </style>
 
 </resources>
