--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -10,19 +10,16 @@
 
     <style name="ValueTextViewTop">
         <item name="android:textSize">@dimen/value_text_size_top</item>
-        <item name="android:textColor">@color/white</item>
     </style>
 
     <style name="LabelTextViewBig">
         <item name="android:textSize">@dimen/value_text_size_standard</item>
-        <item name="android:textColor">@color/white</item>
     </style>
 
     <style name="ValueTextViewBig">
         <item name="android:textSize">@dimen/value_text_size_standard</item>
         <item name="android:layout_marginEnd">6dp</item>
         <item name="android:layout_width">0dp</item>
-        <item name="android:textColor">@color/white</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_weight">1</item>
         <item name="android:gravity">end</item>
@@ -30,7 +27,6 @@
 
     <style name="UnitTextViewBig">
         <item name="android:textSize">@dimen/unit_text_size_big</item>
-        <item name="android:textColor">@color/white</item>
     </style>
 
     <style name="StatRow">
@@ -45,7 +41,7 @@
         <item name="android:layout_height">@dimen/stat_image_size</item>
         <item name="android:layout_width">@dimen/stat_image_size</item>
         <item name="android:layout_marginEnd">12dp</item>
-        <item name="android:tint">@color/white</item>
+        <item name="android:tint">@color/iconTint</item>
     </style>
 
 </resources>
